Fix Nixpacks pip install path

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,11 @@
 nixPkgs = ["python312", "postgresql"]
 
 [phases.install]
-cmds = ["cd backend && pip install -r requirements.txt"]
-
-[phases.build]
-cmds = ["cd backend && python -c 'from app.database import init_db; import asyncio; asyncio.run(init_db())'"]
+cmds = [
+	"cd backend && python -m ensurepip --upgrade",
+	"cd backend && python -m pip install --upgrade pip",
+	"cd backend && python -m pip install -r requirements.txt"
+]
 
 [start]
 cmd = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
