--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,6 @@
 [phases.setup]
-nixPkgs = ["python312", "postgresql"]
+nixPkgs = ["python312Full", "postgresql"]
+env = { PIP_DISABLE_PIP_VERSION_CHECK = "1", PYTHONUNBUFFERED = "1" }
 
 [phases.install]
 cmds = [
