--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,59 @@
 # Python
 __pycache__/
 *.py[cod]
-backend/**/__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
 *.db
 *.sqlite
+.venv/
+venv/
+env/
+.pytest_cache/
 
 # Node
 node_modules/
 .next/
-dashboard/node_modules/
-dashboard/.next/
-dashboard/out/
+out/
+.npm/
+.yarn/
 
 # Environment
 .env
 .env.local
 .env.*.local
+*.env
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
+*.bak
 
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
+
+# Testing
+.coverage
+htmlcov/
+.tox/
+
+# Temporary
+*.tmp
+*.temp
+.cache/
