--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,15 +12,15 @@ alembic==1.13.1
 # Auth & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-pydantic==2.5.3
+pydantic==2.10.3  # Updated to avoid Rust compilation issues
 pydantic-settings==2.1.0
 
 # HTTP Client
 httpx==0.26.0
 aiofiles==23.2.1
 
-# AI - Gemini for natural language processing
-google-generativeai==0.3.2
+# AI - OpenRouter for free LLM access (multiple free models)
+openai==1.12.0  # OpenRouter uses OpenAI-compatible API
 
 # Date parsing
 python-dateutil==2.8.2
