--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 pydantic==2.10.3  # Updated to avoid Rust compilation issues
 pydantic-settings==2.1.0
+email-validator==2.1.0  # Required by Pydantic for EmailStr validation
 
 # HTTP Client
 httpx==0.26.0
