--- a/dashboard/vercel.json
+++ b/dashboard/vercel.json
@@ -1,12 +1,5 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
-  "framework": "nextjs",
-  "env": {
-    "NEXT_PUBLIC_API_URL": {
-      "description": "Backend API URL",
-      "required": true,
-      "example": "https://leaveflow-api.vercel.app"
-    }
-  }
+  "framework": "nextjs"
 }
