--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ alembic==1.13.1
 # Auth & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1  # Explicit version compatible with passlib
 pydantic==2.10.3  # Updated to avoid Rust compilation issues
 pydantic-settings==2.1.0
 email-validator==2.1.0  # Required by Pydantic for EmailStr validation
