--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,16 +3,33 @@
   "builds": [
     {
       "src": "app/main.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
   ],
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/app/static/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/app/static/favicon.ico"
+    },
     {
       "src": "/(.*)",
       "dest": "app/main.py"
     }
   ],
+  "functions": {
+    "app/main.py": {
+      "maxDuration": 30
+    }
+  },
   "env": {
+    "PYTHONPATH": ".",
     "PYTHON_VERSION": "3.11"
   }
 }
