--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,34 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "app/main.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "50mb"
-      }
+      "src": "api/index.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/app/static/$1"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/app/static/favicon.ico"
-    },
-    {
       "src": "/(.*)",
-      "dest": "app/main.py"
+      "dest": "api/index.py"
     }
-  ],
-  "functions": {
-    "app/main.py": {
-      "maxDuration": 30
-    }
-  },
-  "env": {
-    "PYTHONPATH": ".",
-    "PYTHON_VERSION": "3.11"
-  }
+  ]
 }
