--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -24,7 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.10.4",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
